--- a/src/adservice/build.gradle
+++ b/src/adservice/build.gradle
@@ -8,6 +8,10 @@ plugins {
 repositories {
     mavenCentral()
     mavenLocal()
+    maven {
+        url 'https://maven.gremlin.com/'
+    }
+
 }
 
 description = 'Ad Service'
@@ -38,7 +42,7 @@ dependencies {
                 "io.grpc:grpc-netty:${grpcVersion}",
                 "io.grpc:grpc-services:${grpcVersion}",
                 "org.apache.logging.log4j:log4j-core:2.13.0"
-
+        compile group: 'com.gremlin', name: 'alfi-core', version: '0+'
         runtimeOnly "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
                 "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
                 "io.netty:netty-tcnative-boringssl-static:2.0.26.Final"
